force-app/main/default/objects/PaymentMethod__c/fields/AccountNumberChecking__c.field-meta.xml
<CustomField>
    <fullName>AccountNumberChecking__c</fullName>
    <label>Account Number Checking</label>
    <length>50</length>
    <maskChar>X</maskChar>
    <maskType>creditCard</maskType>
    <type>EncryptedText</type>
</CustomField>