force-app/main/default/objects/PaymentMethod__c/fields/BankAccountType__c.field-meta.xml
<CustomField>
    <fullName>BankAccountType__c</fullName>
    <label>Bank Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BankAccountTypePick</valueSetName>
    </valueSet>
</CustomField>