force-app/main/default/objects/PaymentMethod__c/fields/CardExpirationMonth__c.field-meta.xml
<CustomField>
    <fullName>CardExpirationMonth__c</fullName>
    <label>Card Expiration Month</label>
    <length>2</length>
    <type>Text</type>
</CustomField>