force-app/main/default/objects/PaymentMethod__c/fields/CardNumber__c.field-meta.xml
<CustomField>
    <fullName>CardNumber__c</fullName>
    <label>Card Number</label>
    <length>16</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>