force-app/main/default/objects/PaymentMethod__c/fields/Does_it_have_chargent_order__c.field-meta.xml
<CustomField>
    <fullName>Does_it_have_chargent_order__c</fullName>
    <label>Does it have chargent order?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>