force-app/main/default/objects/PaymentMethod__c/fields/fBankAccountType__c.field-meta.xml
<CustomField>
    <fullName>fBankAccountType__c</fullName>
    <formula>Case(BankAccountType__c,&apos;Business Checking&apos;,&apos;C&apos;, &apos;Checking&apos;, &apos;C&apos;,&apos;S&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fBankAccountType</label>
    <type>Text</type>
</CustomField>