force-app/main/default/objects/PaymentMethod__c/fields/FinanceCompany__c.field-meta.xml
<CustomField>
    <fullName>FinanceCompany__c</fullName>
    <label>Finance Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>