force-app/main/default/objects/PaymentMethod__c/fields/FinancedAmount__c.field-meta.xml
<CustomField>
    <fullName>FinancedAmount__c</fullName>
    <label>Financed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>