force-app/main/default/objects/PaymentMethod__c/fields/HomeService__c.field-meta.xml
<CustomField>
    <fullName>HomeService__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Home Service</label>
    <referenceTo>Home_Services__c</referenceTo>
    <relationshipLabel>Payment Methods</relationshipLabel>
    <relationshipName>PaymentMethods</relationshipName>
    <type>Lookup</type>
</CustomField>