force-app/main/default/objects/PaymentMethod__c/fields/NameOnCard__c.field-meta.xml
<CustomField>
    <fullName>NameOnCard__c</fullName>
    <label>Name On Card</label>
    <length>255</length>
    <type>Text</type>
</CustomField>