force-app/main/default/objects/PaymentMethod__c/fields/Payment_Destination__c.field-meta.xml
<CustomField>
    <fullName>Payment_Destination__c</fullName>
    <label>Payment Destination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Products</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>