force-app/main/default/objects/PaymentMethod__c/fields/PaymentMethodType__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethodType__c</fullName>
    <label>Payment Method Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PaymentMethodTypePick</valueSetName>
    </valueSet>
</CustomField>