force-app/main/default/objects/PaymentMethod__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>HomeService__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PaymentMethodType__c</field>
        <operation>equals</operation>
        <value>ACH</value>
    </filters>
    <label>All</label>
</ListView>